# infinidev

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  FEATURE.md  README.md  TODO.md  docs_spec_elaboration_loop.md  install.sh  pyproject.toml
.codex/: config.toml  hooks.json
bench/: __init__.py  config.py  cr_stress_test.sh  evaluate.py  predictions.jsonl  predictions_infinibay_cfg.jsonl  predictions_v2.jsonl  predictions_v3.jsonl  predictions_v4_gather.jsonl  predictions_v5_10.jsonl  repo_setup.py  requirements.txt  run_hle.py  run_swebench.py  test_context_rank_live.sh  test_patches.py
crates/infinidev-codeintel/: Cargo.toml
crates/infinidev-codeintel/src/: lib.rs
crates/infinidev-engine/: Cargo.toml
crates/infinidev-engine/examples/: agent.rs
crates/infinidev-engine/src/: config.rs  engine.rs  error.rs  event.rs  lib.rs  orchestrator.rs  prompt.rs
crates/infinidev-knowledge/: Cargo.toml
crates/infinidev-knowledge/src/: docs.rs  lib.rs  notes.rs
crates/infinidev-llm/: Cargo.toml
crates/infinidev-llm/examples/: chat.rs
crates/infinidev-llm/src/: anthropic.rs  capabilities.rs  client.rs  discovery.rs  error.rs  gemini.rs  lib.rs  openai.rs  pricing.rs  provider.rs  types.rs
crates/infinidev-tools/: Cargo.toml
crates/infinidev-tools/src/: background.rs  context.rs  error.rs  files.rs  git.rs  lib.rs  registry.rs  shell.rs  tool.rs  web.rs
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
desktop/scripts/: build-sidecar.sh  sidecar_entry.py
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/api/: demo.ts  (+3 more)
docs/: DATASET_RULES.md  PHASE_SYSTEM_DESIGN.md  QUESTION_DRIVEN_ANALYSIS.md  REFACTORING_PLAN.md
examples/: prompts.md
examples/project-dashboard/: api.py  dashboard.db  database.py  main.py  models.py  run.sh  schemas.py  seed.py
examples/sitegen/: requirements.txt
examples/sysmonitor/: monitor.py
examples/taskqueue/: demo.py
examples/url-shortener/: main.py  run.sh  test_url_shortener.py  urls.db
finetune/: EXAMPLE_FORMAT.md  METHODOLOGY.md  Modelfile  Modelfile.gptoss  PROGRESS.md  PROGRESS_V3.md  build_dataset.py  config.py  convert_to_structured.py  download_repos.py  ds_config.json  ds_config_zero2.json  ds_config_zero3.json  fix_examples.py  format_dataset.py  fsdp_config.yaml  generate_examples.py  generate_scenarios.py  index_repos.py  patch_examples.py  run_pipeline.py  run_train.sh  train.py  train_gemma4.py  train_senn.py  train_unsloth.py  validate_examples.py  validate_quality.py  validation_report.txt
finetune/output/: training_examples.json
finetune/scenarios/: bat.jsonl  cjson.jsonl  clap.jsonl  click.jsonl  cobra.jsonl  date-fns.jsonl  effect.jsonl  fd.jsonl  flask.jsonl  fzf.jsonl  got.jsonl  gson.jsonl  guava.jsonl  hono.jsonl  httpx.jsonl  jq.jsonl  lipgloss.jsonl  loguru.jsonl  marshmallow.jsonl  nitro.jsonl  orjson.jsonl  pluggy.jsonl  pydantic-settings.jsonl  rayon.jsonl  redis.jsonl  regex-rs.jsonl  rich.jsonl  ripgrep.jsonl  sds.jsonl  serde.jsonl  sqlite.jsonl  tqdm.jsonl  trpc.jsonl  zlib.jsonl  zod.jsonl  zustand.jsonl
finetune/scenarios_v2/: cjson_001_add_function.jsonl  clap_001_bugfix.jsonl  click_001_modify_method.jsonl  click_002_add_function.jsonl  cobra_001_bugfix.jsonl  flask_001_bugfix.jsonl  flask_002_add_method.jsonl  flask_003_rename.jsonl  flask_004_add_test.jsonl  gson_001_add_test.jsonl  hono_001_add_function.jsonl  httpx_001_add_method.jsonl  httpx_002_add_test.jsonl  loguru_001_bugfix.jsonl  marshmallow_001_bugfix.jsonl  redis_001_add_function.jsonl  rich_001_add_method.jsonl  serde_001_add_test.jsonl  zod_001_modify.jsonl  zustand_001_bugfix.jsonl
finetune/scenarios_v3/: app_002_python_api_complex.jsonl  app_003_ts_lib_complex.jsonl  app_004_rust_cli_complex.jsonl  app_005_python_scraper.jsonl  app_006_go_api.jsonl  app_007_ts_react_component.jsonl  app_008_python_calculator.jsonl  batch1_001_incfeat_python.jsonl  batch1_002_incfeat_python.jsonl  batch1_003_bugfix_python.jsonl  batch1_004_errorrecov_python.jsonl  batch1_005_incfeat_typescript.jsonl  batch1_006_bugfix_rust.jsonl  batch1_007_errorrecov_typescript.jsonl  batch1_008_refactor_python.jsonl  batch1_009_addtest_python.jsonl  batch1_010_incfeat_go.jsonl  batch1_011_bugfix_python.jsonl  batch1_012_incfeat_rust.jsonl  batch1_013_errorrecov_go.jsonl  batch1_014_incfeat_c.jsonl  batch1_015_bugfix_typescript.jsonl  batch1_016_incfeat_python.jsonl  batch1_017_incfeat_python.jsonl  batch1_018_bugfix_python.jsonl  batch1_019_incfeat_python.jsonl  batch1_020_errorrecov_python.jsonl  batch1_021_refactor_typescript.jsonl  batch1_022_addtest_rust.jsonl  batch1_023_bugfix_go.jsonl  batch1_024_incfeat_python.jsonl  batch1_025_bugfix_python.jsonl  batch1_026_incfeat_python.jsonl  batch1_027_errorrecov_python.jsonl  batch1_028_incfeat_typescript.jsonl  (+377 more)
scripts/: airllm_run.py  convert_minilm_to_mnn.py  seed_reasoning_patterns.py
tests/: conftest.py  test_analysis_engine.py  test_analyzer.py  test_anchored_memory.py  test_assistant_critic.py  test_auto_permission.py  test_background_tasks_ui.py  test_chat_agent.py  test_chat_agent_primitives.py  test_chat_agent_streaming.py  test_chat_history_scroll.py  test_chat_input.py  test_classic_renderer.py  test_code_intel.py  test_code_intel_integration.py  test_config.py  test_consult_assistant.py  test_context_calculator.py  test_context_panel.py  test_context_permissions.py  test_context_rank.py  test_council.py  test_create_file.py  test_critic_dispatcher.py  test_critic_subloop.py  test_db.py  test_db_schema.py  test_db_service.py  test_depth_config.py  test_engine.py  test_engine_extractions.py  test_engine_initial_plan.py  test_event_bus.py  test_exception_bugfixes.py  test_extractors.py  test_file_diff.py  test_findings_wrap.py  test_flows.py  test_gather.py  test_guidance_stop_planning.py  (+46 more)
(+674 files in other folders)
