# Rust core workspace for Infinidev.
#
# This is the in-progress native port of the agent engine (currently a Python
# package under src/infinidev). It grows crate-by-crate: `infinidev-llm` first
# (provider clients + pricing), then tools/engine/codeintel/knowledge, then an
# `infinidev-core` umbrella that the Tauri desktop app embeds directly.
#
# `desktop/` is excluded for now so the existing Tauri app keeps building as its
# own standalone workspace; it joins this one when we embed the core.
[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["desktop"]

[workspace.package]
edition = "2021"
rust-version = "1.77"
version = "0.9.1"
authors = ["Andres Borek"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/Infinibay/infinidev"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "time", "io-util"] }
ignore = "0.4"
regex = "1"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
thiserror = "2"

[profile.release]
strip = true
lto = "thin"
