[project]
name = "infinidev"
version = "0.3.2"
description = "A terminal-based AI programming tool using agent loops."
authors = [{ name = "Andres Borek", email = "andres.b.dev@gmail.com" }]
dependencies = [
    "crewai>=0.100.0",
    "crewai-tools>=0.30.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "litellm>=1.81.0,!=1.82.7,!=1.82.8",
    "ollama>=0.6.0",
    "chromadb>=1.1.0",
    "numpy>=2.0.0",
    "Pillow>=10.0.0",
    "prompt-toolkit>=3.0.43",
    "click>=8.1.7",
    "httpx>=0.28.0",
    "duckduckgo-search>=8.1.0",
    "trafilatura>=2.0.0",
    "pypdf>=5.0.0",
    "pytest>=9.0.0",
    "textual>=8.1.1",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-json>=0.24.0",
    "tree-sitter-html>=0.23.0",
    "tree-sitter-css>=0.23.0",
    "tree-sitter-bash>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-toml>=0.6.0",
    "tree-sitter-yaml>=0.6.0",
    "tree-sitter-xml>=0.7.0",
    "tree-sitter-markdown>=0.3.0",
    "tree-sitter-regex>=0.24.0",
    "watchfiles>=0.24.0",
    "datasets>=4.8.4",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-c>=0.24.1",
    "yappi>=1.6.0",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-kotlin>=1.1.0",
    "wordfreq>=3.1.1",
    "langdetect>=1.0.9",
]

[project.scripts]
infinidev = "infinidev.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/infinidev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["tests/finetune", "tests/examples/taskqueue"]
#   uv run pytest --override-ini="addopts="
[project.optional-dependencies]
cuda = ["cupy-cuda12x>=13.0.0"]
# MNN-backed embedder — ~10x faster than ChromaDB ONNX on CPU, identical
# output (cosine 1.0000 vs ONNX). Opt-in via INFINIDEV_MNN_MODEL_PATH.
# Install: `pip install 'infinidev[mnn]'` then run
# `python scripts/convert_minilm_to_mnn.py`.
mnn = ["MNN>=3.5.0", "transformers>=4.40,<5"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
