[package]
name = "infinidev-codeintel"
description = "Lightweight code intelligence (symbol extraction) for the Infinidev core."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
infinidev-tools = { path = "../infinidev-tools" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile = "3"
