[package]
name = "infinidev-tools"
description = "Agent tools (file/search/shell/git) for the Infinidev core."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
infinidev-llm = { path = "../infinidev-llm" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
ignore.workspace = true
regex.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile = "3"
