[package]
name = "infinidev-desktop"
version = "0.9.1"
description = "Infinidev — desktop GUI"
authors = ["Andres Borek"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "infinidev_desktop_lib"
# staticlib/cdylib are required for the mobile targets; rlib for the desktop bin.
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "macros", "process", "time"] }
infinidev-engine = { path = "../../crates/infinidev-engine" }
infinidev-knowledge = { path = "../../crates/infinidev-knowledge" }

[features]
# Used for production builds / when no dev server is specified. DO NOT REMOVE.
custom-protocol = ["tauri/custom-protocol"]
